feat: add abbreviation support to the resolver

--- a/tools/gen/verses/abbrs.go.tmpl
+++ b/tools/gen/verses/abbrs.go.tmpl
@@ -1,11 +1,14 @@
 package ref
 
-var Abbreviations = BookAbbreviations{
+var Abbreviations = &BookAbbreviations{
     Abbreviations: []BookAbbreviation{
 {{- range .Abbreviations}}
         {
             Name: "{{.Name}}",
             Preferred: "{{.Standard}}",
+{{- if .Ordinal}}
+            Ordinal: {{.Ordinal}},
+{{- end}}
             Accepts: []string{
 {{- range .Accept}}
                 "{{.}}",
